--- a/index.html
+++ b/index.html
@@ -10,5 +10,26 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- Add this script to the head of your index.html -->
+    <script>
+      // Check if there's a redirect path saved in session storage
+      (function () {
+        var redirect = sessionStorage.getItem("redirect");
+        if (redirect) {
+          // Remove it from storage
+          sessionStorage.removeItem("redirect");
+
+          // Only redirect if we're on the main page
+          if (
+            window.location.pathname.endsWith("/") ||
+            window.location.pathname.endsWith("/index.html")
+          ) {
+            // Manually handle the redirect by updating your app's state
+            // This depends on how your routing is implemented
+            window.history.replaceState(null, null, redirect);
+          }
+        }
+      })();
+    </script>
   </body>
 </html>
